--- a/src/container/homepage/banner/homepage.module.scss
+++ b/src/container/homepage/banner/homepage.module.scss
@@ -94,14 +94,17 @@
   }
   .resume_button {
     margin-top: 30px;
-    width: 150px;
+    width: 180px;
     border-radius: 50px;
     background-color: transparent;
     color: white;
     border: 2px solid white;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
-    height: 44px;
+    height: 50px;
+    @include phone-screen {
+      font-size: 14px;
+    }
   }
   .resume_button:hover {
     background-color: white !important;
@@ -113,8 +116,11 @@
 .social_media_container {
   position: absolute;
   bottom: 20px;
-  font-size: 30px;
+  font-size: 36px;
   display: flex;
+  @include phone-screen {
+    font-size: 30px;
+  }
 }
 
 .media_item {
