--- a/src/container/homepage/technology/technology.module.scss
+++ b/src/container/homepage/technology/technology.module.scss
@@ -2,27 +2,42 @@
 
 .wrapper {
   padding: 0 40px;
+  overflow: hidden !important;
+  margin: 200px 0 400px;
   @include phone-screen {
-    padding: 0 20px;
+    padding: 0;
+    margin: 130px 0;
   }
 }
 
 .row_content_wrapper {
   display: flex;
   align-items: center;
+  width: 100vw;
+  overflow: hidden;
 }
 
 .title {
-  font-size: 32px;
-  margin-bottom: 40px;
+  font-size: 45px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  padding: 0 20px;
   @include phone-screen {
     font-size: 24px;
+    margin-bottom: 30px;
   }
 }
 
+.col_card {
+  display: flex;
+  justify-content: center;
+  padding: 0 -20px;
+}
+
 .card {
-  width: 120px;
-  height: 140px;
+  @include phone-screen {
+    margin: 0 0 30px -20px;
+  }
 }
 
 .logo_img_wrapper {
